fix: apply Guardian compliance fixes (12 issues addressed)