@@ -1,7 +1,9 @@
 package com.example.management.application.service;
 
+import com.example.management.application.port.in.CreateOrderCommand;
 import com.example.management.application.port.in.CreateOrderUseCase;
 import com.example.management.application.port.in.GetOrderUseCase;
+import com.example.management.application.port.in.OrderItemRequest;
 import com.example.management.application.port.in.PayOrderUseCase;
 import com.example.management.application.port.out.OrderPersistencePort;
 import com.example.management.domain.model.Order;
@@ -11,10 +13,8 @@ import com.example.management.domain.valueobject.Money;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * Application service implementing order use cases. Depends only on domain and ports.
@@ -32,14 +32,14 @@ public class OrderApplicationService implements CreateOrderUseCase, GetOrderUseC
 
     @Override
     @Transactional
-    public Order create(UUID customerId, List<OrderItemRequest> items) {
-        if (items == null || items.isEmpty()) {
+    public Order create(CreateOrderCommand command) {
+        if (command == null || command.items() == null || command.items().isEmpty()) {
             throw new IllegalArgumentException("Order must have at least one item");
         }
-        List<OrderItem> domainItems = items.stream()
+        List<OrderItem> domainItems = command.items().stream()
                 .map(i -> new OrderItem(i.productId(), i.quantity(), new Money(i.unitPrice(), DEFAULT_CURRENCY)))
-                .collect(Collectors.toList());
-        Order order = new Order(UUID.randomUUID(), customerId, domainItems);
+                .toList();
+        Order order = new Order(UUID.randomUUID(), command.customerId(), domainItems);
         return orderPersistence.save(order);
     }
 
